apps/monitoring/kromgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kromgo
  namespace: kromgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kromgo
  template:
    metadata:
      labels:
        app: kromgo
    spec:
      containers:
        - name: kromgo
          image: ghcr.io/home-operations/kromgo:0.16.1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: kromgo-config
