apps/monitoring/kromgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: kromgo
spec:
  selector:
    app: kromgo
  ports:
    - name: http
      port: 8080
      targetPort: http
