apps/monitoring/kromgo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kromgo
  namespace: kromgo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kromgo.stadthagen.dev`)
      kind: Rule
      services:
        - name: kromgo
          port: 8080
  tls:
    secretName: kromgo-tls
